@@ -121,6 +121,9 @@ typedef struct {
   uint32_t trashBytes;
   uint32_t trashCount;
   uint32_t total, free;
+#ifndef SAVE_ON_FLASH
+  uint32_t firstPageWithErasedFiles; /// first page with files erased in it - if compacting, this is where we start from
+#endif
 } JsfStorageStats;
 /// Get info about the current filesystem
 JsfStorageStats jsfGetStorageStats(uint32_t addr, bool allPages);
